--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,10 @@ jobs:
         with:
          directory: whiteboard-client
 
-         #this job installs intalls yarn dependencies on the github runner
+         #this job installs installs yarn dependencies on the github runner
          #and also to build the static files that would be transferred to server later
       - name: install Dependencies
         run: |
-          npm update           
           cd whiteboard-client
           npm update
           npm run build     
@@ -43,11 +42,7 @@ jobs:
             cd /var/www/zc_plugin_whiteboard/
             git clean -fd
             git stash
-            git fetch --all
-            git reset --hard origin/develop
-            git pull origin develop            
-            cd /var/www/zc_plugin_whiteboard/whiteboard-server/
-            yarn
+            git pull
 
         # this job copies the build folder from GitHub runners to the server with sftp, make sure the paths are correct      
       - name: copy build to server
@@ -57,7 +52,7 @@ jobs:
           host: ${{ secrets.ZURI_MAIN_HOST }}
           password: ${{ secrets.PASSWORD }}
           localPath: './whiteboard-client/build/'
-          remotePath: '/var/www/zc_plugin_whiteboard/whiteboard-server/build'
+          remotePath: '/var/www/zc_plugin_whiteboard/whiteboard-client/build'
 
         # this job ensures your processes are restarted after the process to serve your app
       - name: restart pm2
